Criação do projeto, implementação da home, footer e navbar, instalação do bootstrap e do fontawesome

--- a/blogPessoal/src/app/footer/footer.component.css
+++ b/blogPessoal/src/app/footer/footer.component.css
@@ -28,4 +28,13 @@ ul.social-network {
   .faInstagram:hover{
   color: #C13584;
   }
+
+  /* footer background color */
+  .bg-green{
+    background-color:#006400;
+  }
+
+  .bg-dark-gray{
+    background-color: #323232;
+  }
   
