--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,50 @@
-<p>home works!!!</p>
+<div class="container w-100">
+  <!--primeira linha - título-->
+  <div class="row w-100 mt-5">
+    <div class="col-md-12">
+      <h1 class="text-monospace text-center">Sejam bem vindes!</h1>
+    </div>
+  </div>
+  <!--final-->
+
+  <!--segunda linha - texto-->
+  <div class="row mt-4 mb-4">
+    <div class="col-md-12">
+      <p class="text-justify text-monospace">
+        Olá! Que bom tê-lo por aqui! A criação deste blog foi inspirada na
+        concepção de dispor um ambiente que possibilitasse a divulgação de
+        conhecimento, histórias, curiosidades e vivências sobre o meio ambiente!
+        Aqui você tem um espaço totalmente aberto para colaborar com boas
+        ideias, reflexões, práticas, dicas e questionamentos a respeito do atual
+        contexto que vivemos em relação a área ambiental. Sinta-se inteiramente
+        a vontade para se expressar, mas também para aprender! Acreditamos que
+        compartilhar conhecimento é a chave para a conscientização e o
+        engajamento e isso depende de boas iniciativas e experiências. Que tal
+        nos contar a sua?
+      </p>
+    </div>
+  </div>
+  <!--final-->
+
+  <!--imagem fixa-->
+  <div class="parallax">
+    <span class="text-light"
+      >Photo by
+      <a class="text-success"
+        href="https://unsplash.com/@abraaopaes?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
+        >Abraao Paes</a
+      ></span
+    >
+  </div>
+  <!--final-->
+
+  <!--button-->
+  <div class="row mt-5 mb-5">
+    <div class="col-md-12 w-100 d-flex justify-content-center">
+      <button class="btn btn-outline-success text-uppercase font-weight-bold">
+        Ver o feed
+      </button>
+    </div>
+  </div>
+  <!--/button-->
+</div>
