--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item text-monospace text-uppercase font-weight-bold p3 texto">
-          <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+          <a class="nav-link text-success" href="#">Home <span class="sr-only">(página atual)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-monospace text-uppercase font-weight-bold p3 texto" href="#">Feed</a>
+          <a class="nav-link text-monospace text-uppercase font-weight-bold p3 texto text-success">Feed</a>
         </li>
        
       </ul>
