--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -41,7 +41,7 @@
   <!--button-->
   <div class="row mt-5 mb-5">
     <div class="col-md-12 w-100 d-flex justify-content-center">
-      <button class="btn btn-outline-success text-uppercase font-weight-bold">
+      <button class="btn btn-outline-success text-uppercase font-weight-bold" routerLink='/feed'>
         Ver o feed
       </button>
     </div>
