--- a/blogPessoal/src/app/navbar/navbar.component.css
+++ b/blogPessoal/src/app/navbar/navbar.component.css
@@ -2,3 +2,9 @@
     letter-spacing:.2rem;
     font-size:16pt;
 }
+
+ /* navbar background color */
+ .bg-green{
+    background-color:#006400;
+  }
+
