--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -1,17 +1,17 @@
-<div class="container-fluid d-flex justify-content-center">
+<div class="container-fluid d-flex justify-content-center bg-green">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<nav class="navbar navbar-expand-lg navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item text-monospace text-uppercase font-weight-bold p3 texto">
-          <a class="nav-link text-success" href="#">Home <span class="sr-only">(página atual)</span></a>
+        <li class="nav-item">
+          <a class="nav-link text-white text-monospace text-uppercase font-weight-bold p3 texto" routerLink='/home'>Home <span class="sr-only">(página atual)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-monospace text-uppercase font-weight-bold p3 texto text-success">Feed</a>
+          <a class="nav-link text-monospace text-uppercase font-weight-bold p3 texto text-white" routerLink='/feed'>Feed</a>
         </li>
        
       </ul>
