--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -59,10 +59,7 @@
         <!--coluna 2 da coluna 2-->
         <div class="col-md-6 d-flex justify-content-end">
           <!--button-->
-          <button
-            type="button"
-            class="btn btn-outline-success w-25"
-          >
+          <button type="button" class="btn btn-outline-success w-25">
             Publicar
           </button>
           <!--/button-->
@@ -111,16 +108,20 @@
           aria-labelledby="nav-postagens-tab"
         >
           <!--linha de pesquisa-->
-          <div class="row mt-3 mb-3">
+          <div class="row mt-1 mb-3">
             <!--coluna 1-->
             <div class="col-md-10 pr-0">
-              <input
-                class="from-control w-100"
-                type="search"
-                placeholder="Pesquisar postagem"
-                aria-label="Pesquisar">
+              <div class="form-group">
+                <input
+                  type="search"
+                  class="form-control"
+                  id="search"
+                  placeholder="Pesquisar postagem" aria-label="Pesquisar"
+                />
+              </div>
             </div>
             <!--/coluna 1-->
+
             <!--coluna 2-->
             <div class="col-md-2 pl-0">
               <!--button-->
@@ -132,7 +133,7 @@
             <!--/coluna 2-->
           </div>
           <!--/linha de pesquisa-->
-        </div>
+      </div>
         <!--/Conteúdo de Postagens-->
 
         <!--Conteúdo de Postagens temas-->
@@ -143,14 +144,17 @@
           aria-labelledby="nav-postagens-tab"
         >
           <!--linha de pesquisa-->
-          <div class="row mt-3 mb-3">
-            <!--coluna 1--> 
+          <div class="row mt-1 mb-3">
+            <!--coluna 1-->
             <div class="col-md-10 pr-0">
-              <input
-                class="from-control w-100"
-                type="search"
-                placeholder="Pesquisar postagem"
-                aria-label="Pesquisar">
+              <div class="form-group">
+                <input
+                  type="search"
+                  class="form-control"
+                  id="search"
+                  placeholder="Pesquisar postagem" aria-label="Pesquisar"
+                />
+              </div>
             </div>
             <!--/coluna 1-->
             <!--coluna 2-->
