--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -13,6 +13,14 @@
         <li class="nav-item">
           <a class="nav-link text-monospace text-uppercase font-weight-bold p3 texto text-white" routerLink='/feed'>Feed</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link text-monospace text-uppercase font-weight-bold p3 texto text-white" routerLink='/login'>Login</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link text-monospace text-uppercase font-weight-bold p3 texto text-white" routerLink='/cadastro'>Cadastro</a>
+        </li>
        
       </ul>
       
