--- a/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -7,7 +7,7 @@
     <!--/centraliza a imagem-->
     <!--texto-->
     <div class="card-body">
-      <h5 class="card-title text-center text-monospace">Caroline das Mercês</h5>
+      <h5 class="card-title text-center text-monospace">{{nome}}</h5>
       <p class="card-text text-center text-monospace">Gestora Ambiental (EACH/USP) e Desenvolvedora Web Fullstack Jr (Generation Brasil).</p>
       <!--/texto-->
       <!--formato de button | meus contatos-->
