--- a/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -11,8 +11,8 @@
       <p class="card-text text-center text-monospace">Gestora Ambiental (EACH/USP) e Desenvolvedora Web Fullstack Jr (Generation Brasil).</p>
       <!--/texto-->
       <!--formato de button | meus contatos-->
-      <a href="https://www.linkedin.com/in/carolinedasmerces/" class="btn btn-outline-info mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
-      <a href="https://github.com/carolinemerces" class="btn btn-outline-dark d-flex justify-content-center" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/carolinedasmerces/" class="btn btn-info mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
+      <a href="https://github.com/carolinemerces" class="btn btn-dark d-flex justify-content-center" target="_blank">GitHub</a>
       <!--formato de button | meus contatos-->
     </div>
      
