--- a/blogPessoal/src/app/post-tema/post-tema.component.html
+++ b/blogPessoal/src/app/post-tema/post-tema.component.html
@@ -13,7 +13,14 @@
         </div>
         <div class="row mb-5">
           <div class="col-md-12 d-flex justify-content-center">
-            <button class="btn btn-outline-success w-25" (click)='cadastrar()'>Cadastrar</button>
+            <button class="btn btn-success w-25 mr-3" (click)='cadastrar()'>Cadastrar</button>
+            <button
+          type="button"
+          class="btn btn-info w-25"
+          (click)="voltar()"
+        >
+          Voltar
+        </button>
           </div>
         </div>
   
@@ -38,8 +45,8 @@
               <th scope="row">{{item.id}}</th>
               <td>{{item.descricao}}</td>
                 <td class="d-flex justify-content-end">
-                  <a class="btn btn-outline-info mr-3" >Editar</a>
-                  <a class="btn btn-outline-danger">Apagar</a>
+                  <a class="btn btn-info mr-3" [routerLink]="['/editar-tema',item.id]">Editar</a>
+                  <a class="btn btn-danger" [routerLink]="['/delete-tema',item.id]">Apagar</a>
                 </td>
   
   
