--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
           >
         </li>
 
-        <div *ngIf="auth.btnFeed()">
+        <!--div *ngIf="auth.btnFeed()"-->
           <li class="nav-item">
             <a
               class="nav-link text-monospace text-uppercase font-weight-bold p3 texto text-white"
@@ -30,7 +30,7 @@
               >Feed</a
             >
           </li>
-        </div>
+        <!--/div-->
 
         <div *ngIf="auth.btnLogin()">
           <li class="nav-item">
